# CounterDroneServer

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/: Configuration.h  DroneDataSensor.h  DroneDataSimulator.h  Generals.h  LockFreeSharedDataManager.h  SensorDataConsumer.h  SensorDataParser.h  TelemetryDataProcessor.h  TelemetryPacket.h  TelemetryPacketsProcessor.h  ThreadsSharedDataManager.h
src/: DroneDataSensor.cpp  DroneDataSimulator.cpp  SensorDataConsumer.cpp  SensorDataParser.cpp  TelemetryDataProcessor.cpp  TelemetryPacketsProcessor.cpp  main.cpp
